# diligent

./: .env.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  BACKLOG.md  CLAUDE.md  Makefile  README.md  STATUS.md  biome.json  claude.txt  lefthook.yml  package.json  tail-session.sh  tsconfig.json
.claude/: settings.json  skills
apps/desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: init.rs  lib.rs  main.rs  sidecar.rs  update.rs
apps/overdare-ai-agent/: Cargo.toml  README.md
apps/overdare-ai-agent/bootstrap/skills/actionsequence/references/animations/: 00_INDEX.md  Handgun.md  Life.md  Melee.md
apps/overdare-ai-agent/bootstrap/skills/actionsequence/references/json/: CommonRolling.json  SpearSkillUltimate.json
apps/overdare-ai-agent/bootstrap/skills/tpa/references/: 01_DATA_LAYER.md  04b_UTIL_LAYER.md  05_PLUGIN_RUNTIME_LAYER.md
apps/overdare-ai-agent/plugins/plugin-studiorpc/src/methods/: instance.params.ts  level.save.file.ts  script.edit.ts  script.grep.ts  script.read.ts
apps/overdare-ai-agent/plugins/plugin-studiorpc/src/tools/: script-edit-tool.ts
apps/overdare-ai-agent/plugins/plugin-studiorpc/test/tools/: script-tools.test.ts
apps/overdare-ai-agent/plugins/plugin-validator/src/: validatelua.ts
apps/overdare-ai-agent/scripts/: tool-cli.ts
apps/overdare-ai-agent/src/: cli.rs  init.rs  main.rs  storage.rs  update.rs  webserver.rs
apps/overdare-ai-agent/supabase/: config.toml
(+411 files in other folders)
