[package]
name = "overdare-ai-agent"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "overdare-ai-agent"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "process", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sha2 = { version = "0.10", default-features = false }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
